
FILE(GLOB Test_Files *.h *.cpp)

INCLUDE_DIRECTORIES(
	.
	..
)

# Create the executable
ADD_EXECUTABLE( tests
        ${Test_Files}
)

TARGET_LINK_LIBRARIES ( tests
	Base
	MathLib
	GeoLib
	MeshLib
	DiscreteLib
#	FdmLib
	FemLib
	NumLib
)


# Link external libraries
TARGET_LINK_LIBRARIES( tests ${GTEST_BOTH_LIBRARIES} )

IF (WIN32)
        TARGET_LINK_LIBRARIES( tests Winmm.lib )
ENDIF (WIN32)

IF (LIS_FOUND)
	TARGET_LINK_LIBRARIES( tests ${LIS_LIBRARIES} )
ENDIF (LIS_FOUND)

IF (USE_BLAS_LAPACK)
	TARGET_LINK_LIBRARIES( tests ${BLAS_LIBRARIES} )
	TARGET_LINK_LIBRARIES( tests ${LAPACK_LIBRARIES} )
ENDIF (USE_BLAS_LAPACK)

IF(USE_PETSC)
        TARGET_LINK_LIBRARIES( tests  ${PETSC_LIBRARIES} )
	IF (MSVC)
		SET_TARGET_PROPERTIES(tests PROPERTIES
		    	LINK_FLAGS "
			/NODEFAULTLIB:\"libcmt.lib\"
		    	")
	ENDIF( MSVC)
ENDIF(USE_PETSC)


