
FILE(GLOB TestMPI_Files *.h *.cpp)

INCLUDE_DIRECTORIES(
	.
	..
)

# Create the executable
ADD_EXECUTABLE( testsMPI
        ${TestMPI_Files}
)

TARGET_LINK_LIBRARIES ( testsMPI
	BaseLib
	MathLib
	GeoLib
	MeshLib
	DiscreteLib
#	FdmLib
	FemLib
	NumLib
)


# Link external libraries
IF (WIN32)
        TARGET_LINK_LIBRARIES( testsMPI Winmm.lib )
ENDIF (WIN32)

IF (LIS_FOUND)
	TARGET_LINK_LIBRARIES( testsMPI ${LIS_LIBRARIES} )
ENDIF (LIS_FOUND)

IF (USE_BLAS_LAPACK)
	TARGET_LINK_LIBRARIES( testsMPI ${BLAS_LIBRARIES} )
	TARGET_LINK_LIBRARIES( testsMPI ${LAPACK_LIBRARIES} )
ENDIF (USE_BLAS_LAPACK)

IF(USE_PETSC)
        TARGET_LINK_LIBRARIES( testsMPI  ${PETSC_LIBRARIES} )
	IF (MSVC)
		SET_TARGET_PROPERTIES(testsMPI PROPERTIES
		    	LINK_FLAGS "
			/NODEFAULTLIB:\"libcmt.lib\"
		    	")
	ENDIF( MSVC)
ENDIF(USE_PETSC)

IF (USE_MPI)
	INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
        TARGET_LINK_LIBRARIES( testsMPI ${MPI_C_LIBRARIES} )
ENDIF (USE_MPI)


SET_TARGET_PROPERTIES(testsMPI PROPERTIES LINKER_LANGUAGE CXX)
